--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Page Title</title>
+    <title>Greek Gods and Goddessess</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
   </head>
+
   <body>
-    <h1>Main Heading</h1>
+    <a href="index.html">Home</a>
+    <a href="page1.html">About</a>
+    <a href="page2.html">Quiz</a>
+    <h1>Olympian Gods and Goddessess</h1>
+    <p>"the only true wisdom is in knowing you know nothing"</p>
+    <p>-Socrates</p>
   </body>
 </html>
