--- a/page1.html
+++ b/page1.html
@@ -1,1 +1,53 @@
-<h1>The Tweleve Gods and Goddesses of Mount Olympus</h1>
+<head>
+  <title>Greek Gods and Goddesses</title>
+</head>
+
+<body>
+  <h1>The Gods and Goddesses of Mount Olympus</h1>
+  <p>and some facts about them</p>
+  <hr />
+  <h1>Zeus</h1>
+  <ul>
+    <li>Considered king of gods.</li>
+    <li>God of Sky, Lightning, and Thunder.</li>
+    <li>
+      The eagle, thunderbolt, bull and oak are all symbols associated with him.
+    </li>
+    <li>
+      More Zeus-facts on
+      <a href=" https://learnodo-newtonic.com/zeus-facts" target="blank"
+        >this</a> site.
+    </li>
+  </ul>
+
+  <h1>Poseidon</h1>
+  <ul>
+    <li>God of the Sea</li>
+    <li>
+      Believed to be the creator of horses. According to the stories, Demeter
+      asked Poseidon to create the world's most beautiful animal he did just
+      that and created horses.
+    </li>
+    <li>
+      A major symbol associated with Poseidon is the Trident. He is holding the
+      trident in almost every depiction of him from books to movies to
+      sculptures
+      <li>learn more about him on <a href="https://athensandbeyond.com/facts-about-hera-queen-of-the-gods/" target="blank">this</a> site.</li>
+    </li>
+  </ul>
+
+  <h1>Hera</h1>
+  <ul>
+    <li>Protector of women. She presided over marriages and birthsa</li>
+    <li>Has a festival dedicated to her. This was an all-female athletic competition which was held in some city-states, called Heria.</li>
+    <li>Hera had quite a few different names and some of them included: Alexandros, Hyperkheiria and Teleia.</li>
+    <li>Learn more about her on <a href="https://athensandbeyond.com/facts-about-hera-queen-of-the-gods/" target="blank">this</a> site.</li>
+  </ul>
+
+  <h1>Hestia</h1>
+  <ul>
+    <li>The Goddess of Hearth. This was awarded to her by Zeus because instead of marriage to either Apollo or Poseidon she chose to reemain a virgin to keep the peace on Mount Olympus.</li>
+    <li>Hestia isn't in a lot of the myths becaused she remained at the house alone tending to the </li>
+    <li>https://www.greekmythology.com/Olympians/Hestia/hestia.html</li>
+  </ul>
+</body>
