--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Greek Gods and Goddessess</title>
+    <title>BTS</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
@@ -11,8 +11,19 @@
     <a href="index.html">Home</a>
     <a href="page1.html">About</a>
     <a href="page2.html">Quiz</a>
-    <h1>Olympian Gods and Goddessess</h1>
-    <p>"the only true wisdom is in knowing you know nothing"</p>
-    <p>-Socrates</p>
+    <h1>BTS (Bangtan Sonyeodan)</h1>
+    <p>
+      Days when you hate that you're you, days when you wanna disappear Let's
+      make a door in your heart If you open that door and go inside, this place
+      will be waiting for you It's ok to believe, it'll comfort you, this Magic
+      Shop.
+    </p>
+    <p>-Magic shop by BTS</p>
+
+    <p>Even all the scars from your mistakes make up your constellation</p>
+    <p>-Answer: Love Myself by BTS</p>
+
+    <p>Go your own way Even if you live a day Do something Put weakness away</p>
+    <p>-No More Dream by BTS</p>
   </body>
 </html>
