--- a/page1.html
+++ b/page1.html
@@ -1,73 +1,5 @@
 <head>
-  <title>Greek Gods and Goddesses</title>
+  <title>BTS</title>
 </head>
 
-<body>
-  <h1>The Gods and Goddesses of Mount Olympus</h1>
-  <p>and some facts about them</p>
-  <hr />
-  <h1>Zeus</h1>
-  <ul>
-    <li>Considered King of Gods.</li>
-    <li>God of Sky, Lightning, and Thunder.</li>
-    <li>The eagle, thunderbolt, bull and oak are all symbols associated with him.</li>
-    <li>
-      More information <a href=" https://learnodo-newtonic.com/zeus-facts" target="blank">here</a>.
-    </li>
-  </ul>
-
-  <h1>Poseidon</h1>
-  <ul>
-    <li>God of the Sea</li>
-    <li>
-      Believed to be the creator of horses. According to the stories, Demeter
-      asked Poseidon to create the world's most beautiful animal he did just
-      that and created horses.
-    </li>
-    <li>
-      A major symbol associated with Poseidon is the Trident. He is holding the
-      trident in almost every depiction of him from books to movies to
-      sculptures </li>
-    <li>Learn more about him on <a href="https://athensandbeyond.com/facts-about-hera-queen-of-the-gods/" target="blank">this</a> site.</li>
-    </li>
-  </ul>
-
-  <h1>Hera</h1>
-  <ul>
-    <li>Protector of women. She presided over marriages and birthsa</li>
-    <li>Has a festival dedicated to her. This was an all-female athletic competition which was held in some city-states, called Heria.</li>
-    <li>Hera had quite a few different names and some of them included: Alexandros, Hyperkheiria and Teleia.</li>
-    <li>Learn more about her on <a href="https://athensandbeyond.com/facts-about-hera-queen-of-the-gods/" target="blank">this</a> site.</li>
-  </ul>
-
-  <h1>Hestia</h1>
-  <ul>
-    <li>The Goddess of Hearth. This was awarded to her by Zeus because instead of marriage to either Apollo or Poseidon she chose to reemain a virgin to keep the peace on Mount Olympus.</li>
-    <li>The symbols related to Hestia are the fire, hearth and kettle</li>
-    <li>
-      Hestia isn't in a lot of the myths becaused she remained at the house alone tending to the 
-    </li>
-    <li>More information <a href="https://www.greekmythology.com/Olympians/Hestia/hestia.html" target="_blank">here</a></li>
-  </ul>
-
-<h1>Demeter</h1>
-<ul>
-  <li>Goddess of Fertility and harvest</li>
-  <li>Mother to Persephone. The abduction of Persephone by Hades upset Demeter so much that in her grief and search of her daughter she forgot to look over the humans and this led to a decrease in harvest thus creating the season winter.</li>
-  <li>Demeter's symbols are the cornucopia, corn, the torch, the scepter, wheat and the bread</li>
-  <li>More information <a href="https://www.greekmythology.com/Other_Gods/Demeter/demeter.html" target="blank">here</a></li>
-</ul>
-
-<h1>Apollo</h1>
-<ul>
-  <li>God of The Sun and Light\</li>
-  <li>Apollo was the first god of healing and medicine and he passed this postion onto his son Asclepius, a master healer who had found a way to cure death. Asclepius continued to bring people back from the dead for a while before Hades asked Zeus to intervene as people not dying when they should was upsetting the balance of things. To stop Asclepius before he could teach someone else his technique Zeus killed him with his lightning.</li>
-  <li>Apollo's arrows could bring on illness to the one they struck or if Apollo wanted-to thhe entire are where the arrow struck.</li>
-  <li>More information <a href="https://athensandbeyond.com/facts-about-apollo-the-god-of-the-sun/" target="blank">here</a></li>
-</ul>
-
-<h1>Artemis</h1>
-<ul>
-  <li></li>
-</ul>
-</body>
+<body></body>
