--- a/page1.html
+++ b/page1.html
@@ -2,4 +2,14 @@
   <title>BTS</title>
 </head>
 
-<body></body>
+<body>
+  <h1>Members</h1>
+  <p>
+   <ul>
+    <li>Kim Namjoon- leader, rapper, 28 years old </li>
+   </ul>
+  </p>
+  <h1>Debut</h1>
+  <h1>Music</h1>
+  <h1>Accomplishments so Far</h1>
+</body>
