--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
     <a href="index.html">Home</a>
     <a href="page1.html">About</a>
     <a href="page2.html">Quiz</a>
-    <h1>BTS (Bangtan Sonyeodan)</h1>
-    <p>
-      Days when you hate that you're you, days when you wanna disappear Let's
-      make a door in your heart If you open that door and go inside, this place
-      will be waiting for you It's ok to believe, it'll comfort you, this Magic
-      Shop.
-    </p>
-    <p>-Magic shop by BTS</p>
+    <div>
+      <h1>BTS (Bangtan Sonyeodan)</h1>
+      <p>
+        Days when you hate that you're you, days when you wanna disappear Let's
+        make a door in your heart If you open that door and go inside, this
+        place will be waiting for you It's ok to believe, it'll comfort you,
+        this Magic Shop.
+      </p>
+      <p>-Magic shop by BTS</p>
 
-    <p>Even all the scars from your mistakes make up your constellation</p>
-    <p>-Answer: Love Myself by BTS</p>
+      <p>Even all the scars from your mistakes make up your constellation</p>
+      <p>-Answer: Love Myself by BTS</p>
 
-    <p>Go your own way Even if you live a day Do something Put weakness away</p>
-    <p>-No More Dream by BTS</p>
+      <p>
+        Go your own way Even if you live a day Do something Put weakness away
+      </p>
+      <p>-No More Dream by BTS</p>
+    </div>
   </body>
 </html>
