--- a/page1.html
+++ b/page1.html
@@ -6,10 +6,34 @@
   <h1>Members</h1>
   <p>
    <ul>
-    <li>Kim Namjoon- leader, rapper, 28 years old </li>
+    <li>Kim Namjoon(RM)- leader, rapper, 28 years old </li>
+    <li>Jung Hoseok(J-Hope)- rapper, 28 years old</li>
+    <li>Kim-Seok Jin(Jin)- vocals, 29 years old</li>
+    <li>Min Yoon-gi(Suga)- rapper, 29 years old</li>
+    <li>Park Jimin(Jimin)- lead vocals, 26 years old</li>
+    <li>Kim Tae-Hyung(V)- vocals, 26 years old</li>
+    <li>Jeon Jung-Kook(Jung Kook)- main vocals, 25 years old</li>
    </ul>
   </p>
+
   <h1>Debut</h1>
+  <p>
+    BTS debuted on June 12th, 2013 with the song <a href="https://www.youtube.com/watch?v=rBG5L7UsUxA" target="_blank">No More Dream</a>
+  </p>
+
   <h1>Music</h1>
+  <p>Bts is a wolrd famous boyband and for good reason too. Their music has brought joy and hope into lives of some people because they found comfort in the songs. and some people just listen to them because they like their music, and their achievements are the physical proof of it.</p>
+  <p>
+    Bts songs range in genres, with mostly pop songs to rap, hip-hop , pop rock, Korean Rock, etc. While most of their songs are in Korean, they have songs that are in Japanese, English and some songs that combine Korean and English both.
+  </p>
+  <p>Each member in BTS also has their own songs, and has collabed with other artists.</p>
+  <p>You can listen to their songs <a href="https://www.youtube.com/watch?v=QmpTkkaKYSU&list=PL_Cqw69_m_yz4JcOfmZb2IDWwIuej1xfN" target="_blank">here</a></p>
+
   <h1>Accomplishments so Far</h1>
+ 
+    <ul>
+      <li></li>
+
+    </ul>
+  </p>
 </body>
