--- a/page1.html
+++ b/page1.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html> 
+<html lang="en">
 <head>
   <title>BTS</title>
 </head>
@@ -30,12 +32,12 @@
   <p>You can listen to their songs <a href="https://www.youtube.com/watch?v=QmpTkkaKYSU&list=PL_Cqw69_m_yz4JcOfmZb2IDWwIuej1xfN" target="_blank">here</a></p>
 
   <h1>Accomplishments so Far</h1>
-  <p>BTS have had 663 nominations with 462 wins since that debuted</p>
+  <p>BTS have had 663 nominations with 462 wins since debut</p>
   <p>The detailed list of their nomination and awards is on this <a href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_BTS" target="_blank">site.</a></p>
   <p>
     They have also broken quite a few records since debut, which include:
     <ul>
-      <li>They were the first K-popo group to reach No.1 on Billboard 200</li>
+      <li>They were the first K-pop group to reach No.1 on Billboard 200</li>
       <li>First K-pop group to lead the Billboard Artist 100 chart</li>
       <li>Were the first K-pop group to reach top 10 single on the Billboard Hot 100</li>
       <li>Spent 200 weeks at No.1 for Billboard's Social 50 chart</li>
@@ -43,3 +45,5 @@
     </ul>
   </p>
 </body>
+
+</html>
