--- a/page1.html
+++ b/page1.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <title>BTS</title>
+  <link rel="stylesheet" href="1style.css">
 </head>
 
 <body>
   <h1>Members</h1>
+  <hr>
   <p>
    <ul>
     <li>Kim Namjoon(RM)- leader, rapper, 28 years old </li>
@@ -19,11 +21,13 @@
   </p>
 
   <h1>Debut</h1>
+  <hr>
   <p>
     BTS debuted on June 12th, 2013 with the song <a href="https://www.youtube.com/watch?v=rBG5L7UsUxA" target="_blank">No More Dream</a>
   </p>
 
   <h1>Music</h1>
+  <hr>
   <p>Bts is a wolrd famous boyband and for good reason too. Their music has brought joy and hope into lives of some people because they found comfort in the songs. and some people just listen to them because they like their music, and their achievements are the physical proof of it.</p>
   <p>
     Bts songs range in genres, with mostly pop songs to rap, hip-hop , pop rock, Korean Rock, etc. While most of their songs are in Korean, they have songs that are in Japanese, English and some songs that combine Korean and English both.
@@ -32,6 +36,7 @@
   <p>You can listen to their songs <a href="https://www.youtube.com/watch?v=QmpTkkaKYSU&list=PL_Cqw69_m_yz4JcOfmZb2IDWwIuej1xfN" target="_blank">here</a></p>
 
   <h1>Accomplishments so Far</h1>
+  <hr>
   <p>BTS have had 663 nominations with 462 wins since debut</p>
   <p>The detailed list of their nomination and awards is on this <a href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_BTS" target="_blank">site.</a></p>
   <p>
