--- a/page1.html
+++ b/page1.html
@@ -28,12 +28,12 @@
 
   <h1>Music</h1>
   <hr>
-  <p>Bts is a wolrd famous boyband and for good reason too. Their music has brought joy and hope into lives of some people because they found comfort in the songs. and some people just listen to them because they like their music, and their achievements are the physical proof of it.</p>
+  <p class="white">Bts is a wolrd famous boyband and for good reason too. Their music has brought joy and hope into lives of some people because they found comfort in the songs. and some people just listen to them because they like their music, and their achievements are the physical proof of it.</p>
   <p>
     Bts songs range in genres, with mostly pop songs to rap, hip-hop , pop rock, Korean Rock, etc. While most of their songs are in Korean, they have songs that are in Japanese, English and some songs that combine Korean and English both.
   </p>
-  <p>Each member in BTS also has their own songs, and has collabed with other artists.</p>
-  <p>You can listen to their songs <a href="https://www.youtube.com/watch?v=QmpTkkaKYSU&list=PL_Cqw69_m_yz4JcOfmZb2IDWwIuej1xfN" target="_blank">here</a></p>
+  <p class="white1">Each member in BTS also has their own songs, and has collabed with other artists.</p>
+  <p class="whit2">You can listen to their songs <a href="https://www.youtube.com/watch?v=QmpTkkaKYSU&list=PL_Cqw69_m_yz4JcOfmZb2IDWwIuej1xfN" target="_blank">here</a></p>
 
   <h1>Accomplishments so Far</h1>
   <hr>
@@ -41,7 +41,7 @@
   <p>The detailed list of their nomination and awards is on this <a href="https://en.wikipedia.org/wiki/List_of_awards_and_nominations_received_by_BTS" target="_blank">site.</a></p>
   <p>
     They have also broken quite a few records since debut, which include:
-    <ul>
+    <ul class="ul2">
       <li>They were the first K-pop group to reach No.1 on Billboard 200</li>
       <li>First K-pop group to lead the Billboard Artist 100 chart</li>
       <li>Were the first K-pop group to reach top 10 single on the Billboard Hot 100</li>
