--- a/page1.html
+++ b/page1.html
@@ -29,11 +29,11 @@
   <h1>Music</h1>
   <hr>
   <p class="white">Bts is a wolrd famous boyband and for good reason too. Their music has brought joy and hope into lives of some people because they found comfort in the songs. and some people just listen to them because they like their music, and their achievements are the physical proof of it.</p>
-  <p>
+  <p class="white1">
     Bts songs range in genres, with mostly pop songs to rap, hip-hop , pop rock, Korean Rock, etc. While most of their songs are in Korean, they have songs that are in Japanese, English and some songs that combine Korean and English both.
   </p>
-  <p class="white1">Each member in BTS also has their own songs, and has collabed with other artists.</p>
-  <p class="whit2">You can listen to their songs <a href="https://www.youtube.com/watch?v=QmpTkkaKYSU&list=PL_Cqw69_m_yz4JcOfmZb2IDWwIuej1xfN" target="_blank">here</a></p>
+  <p class="white2">Each member in BTS also has their own songs, and has collabed with other artists.</p>
+  <p class="white3">You can listen to their songs <a href="https://www.youtube.com/watch?v=QmpTkkaKYSU&list=PL_Cqw69_m_yz4JcOfmZb2IDWwIuej1xfN" target="_blank">here</a></p>
 
   <h1>Accomplishments so Far</h1>
   <hr>
