--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         place will be waiting for you It's ok to believe, it'll comfort you,
         this Magic Shop.""
       </p>
-      <p>strong -Magic shop by BTS</p>
+      <p><strong>-Magic shop by BTS</strong></p>
 
       <p>"Even all the scars from your mistakes make up your constellation."</p>
-      <p>-Answer: Love Myself by BTS</p>
+      <p><strong>-Answer: Love Myself by BTS</strong></p>
 
       <p>"Go your own way Even if you live a day</p>
       <p>Do something</p>
       <p>Put weakness away."</p>
-      <p>-No More Dream by BTS</p>
+      <p><strong>-No More Dream by BTS</strong></p>
     </div>
   </body>
 </html>
