--- a/page1.html
+++ b/page1.html
@@ -6,6 +6,11 @@
 </head>
 
 <body>
+  <a class="index" href="index.html">Home</a>
+  <a class="about" href="page1.html">About</a>
+  <a class="quiz" href="page2.html">Quiz</a>
+  <hr>
+
   <h1>Members</h1>
   <hr>
   <p>
