--- a/page2.html
+++ b/page2.html
@@ -5,37 +5,46 @@
     <link rel="stylesheet" href="2style.css" />
   </head>
   <body>
+    <a class="index" href="index.html">Home</a>
+    <a class="about" href="page1.html">About</a>
+    <a class="quiz" href="page2.html">Quiz</a>
+
     <h1>Quiz</h1>
     <hr />
 
     <div>
       <h1>Question 1</h1>
       <p>What are the names of each of the seven members of BTS?</p>
-      <p><input type="text" /><button>Enter</button></p>
+      <p><input type="text" /></p>
 
       <hr />
 
       <h1>Question 2</h1>
       <p>What does BTS stand for?</p>
-      <p><input type="text" /><button>Enter</button></p>
+      <p><input type="text" /></p>
 
       <hr />
 
       <h1>Question 3</h1>
       <p>When did BTS debut?</p>
-      <p><input type="text" /><button>Enter</button></p>
+      <p><input type="text" /></p>
 
       <hr />
 
       <h1>Question 4</h1>
       <p>What song did BTS debut with?</p>
-      <p><input type="text/" /><button>Enter</button></p>
+      <p><input type="text/" /></p>
 
       <hr />
 
       <h1>Question 5</h1>
       <p>How many awards has BTS won</p>
-      <p><input type="text" /><button>Enter</button></p>
+      <p><input type="text" /></p>
+
+      <hr> 
+
+      <p><button>Enter</button></p>
+      <p>Total score: ---%</p>
     </div>
   </body>
 </html>
