--- a/page2.html
+++ b/page2.html
@@ -14,37 +14,37 @@
 
     <div>
       <h1>Question 1</h1>
-      <p>What are the names of each of the seven members of BTS?</p>
-      <p><input type="text" /></p>
+      <p>How many BTS members are there?</p>
+      <p><input type="text" id="qnOne" /></p>
 
       <hr />
 
       <h1>Question 2</h1>
       <p>What does BTS stand for?</p>
-      <p><input type="text" /></p>
+      <p><input type="text" id="qnTwo" /></p>
 
       <hr />
 
       <h1>Question 3</h1>
       <p>When did BTS debut?</p>
-      <p><input type="text" /></p>
+      <p><input type="text" id="qnThree" /></p>
 
       <hr />
 
       <h1>Question 4</h1>
       <p>What song did BTS debut with?</p>
-      <p><input type="text/" /></p>
+      <p><input type="text/" id="qnFour" /></p>
 
       <hr />
 
       <h1>Question 5</h1>
       <p>How many awards has BTS won</p>
-      <p><input type="text" /></p>
+      <p><input type="text" id="qnFive" /></p>
 
       <hr> 
 
-      <p><button>Enter</button></p>
-      <p>Total score: ---%</p>
+      <p><button id="btn" >Enter</button></p>
+      <p id="output" >Total score: ---%</p>
     </div>
   </body>
 </html>
