--- a/page2.html
+++ b/page2.html
@@ -29,22 +29,22 @@
       <p>When did BTS debut?</p>
       <p><input type="text" id="qnThree" /></p>
 
-      <hr />
+      <hr>
 
       <h1>Question 4</h1>
       <p>What song did BTS debut with?</p>
-      <p><input type="text/" id="qnFour" /></p>
+      <p><input type="text" id="qnThree" /></p>
 
       <hr />
 
       <h1>Question 5</h1>
-      <p>How many awards has BTS won</p>
-      <p><input type="text" id="qnFive" /></p>
+      <p>How many awards has BTS won?</p>
+      <p><input type="text/" id="qnFour" /></p>
 
-      <hr> 
+      <hr />
 
       <p><button id="btn" >Enter</button></p>
-      <p id="output" >Total score: ---%</p>
+      <p id="output" >Total score: ( /4) --%</p>
     </div>
   </body>
 </html>
