--- a/page2.html
+++ b/page2.html
@@ -44,7 +44,9 @@
       <hr />
 
       <p><button id="btn" >Enter</button></p>
-      <p id="output" >Total score: ( /4) --%</p>
+      <p id="output" >Total score:</p>
+      <p id="frac" > ---/4</p>
+      <p id="percent" > ---%</p>
     </div>
   </body>
 </html>
