--- a/page2.html
+++ b/page2.html
@@ -15,37 +15,37 @@
     <div>
       <h1>Question 1</h1>
       <p>How many BTS members are there?</p>
-      <p><input type="text" id="qnOne" /></p>
+      <p><input type="text" id="qnOne" class="question" /></p>
 
       <hr />
 
       <h1>Question 2</h1>
       <p>What does BTS stand for?</p>
-      <p><input type="text" id="qnTwo" /></p>
+      <p><input type="text" id="qnTwo" class="question" /></p>
 
       <hr />
 
       <h1>Question 3</h1>
       <p>When did BTS debut?</p>
-      <p><input type="text" id="qnThree" /></p>
+      <p><input type="text" id="qnThree" class="question" /></p>
 
       <hr>
 
       <h1>Question 4</h1>
       <p>What song did BTS debut with?</p>
-      <p><input type="text" id="qnThree" /></p>
+      <p><input type="text" id="qnThree" class="question" /></p>
 
       <hr />
 
       <h1>Question 5</h1>
       <p>How many awards has BTS won?</p>
-      <p><input type="text/" id="qnFour" /></p>
+      <p><input type="text/" id="qnFour" class="question" /></p>
 
       <hr />
 
       <p><button id="btn" >Enter</button></p>
       <p id="output" >Total score:</p>
-      <p id="frac" > ---/4</p>
+      <p id="score" >---</p>
       <p id="percent" > ---%</p>
     </div>
   </body>
