--- a/page2.html
+++ b/page2.html
@@ -15,31 +15,31 @@
     <div>
       <h1>Question 1</h1>
       <p>How many BTS members are there?</p>
-      <p><input type="text" id="qnOne" class="question" /></p>
+      <p><input type="text" id="qnOne" class="qn" /></p>
 
       <hr />
 
       <h1>Question 2</h1>
       <p>What does BTS stand for?</p>
-      <p><input type="text" id="qnTwo" class="question" /></p>
+      <p><input type="text" id="qnTwo" class="qn" /></p>
 
       <hr />
 
       <h1>Question 3</h1>
       <p>When did BTS debut?</p>
-      <p><input type="text" id="qnThree" class="question" /></p>
+      <p><input type="text" id="qnThree" class="qn" /></p>
 
       <hr>
 
       <h1>Question 4</h1>
       <p>What song did BTS debut with?</p>
-      <p><input type="text" id="qnThree" class="question" /></p>
+      <p><input type="text" id="qnThree" class="qn" /></p>
 
       <hr />
 
       <h1>Question 5</h1>
       <p>How many awards has BTS won?</p>
-      <p><input type="text/" id="qnFour" class="question" /></p>
+      <p><input type="text/" id="qnFour" class="qn" /></p>
 
       <hr />
 
