--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,7 @@
   <head>
     <title>Quiz</title>
     <link rel="stylesheet" href="2style.css" />
+    <script defer src="main.js"></script>
   </head>
   <body>
     <a class="index" href="index.html">Home</a>
@@ -33,13 +34,13 @@
 
       <h1>Question 4</h1>
       <p>What song did BTS debut with?</p>
-      <p><input type="text" id="qnThree" class="qn" /></p>
+      <p><input type="text" id="qnFour" class="qn" /></p>
 
       <hr />
 
       <h1>Question 5</h1>
       <p>How many awards has BTS won?</p>
-      <p><input type="text/" id="qnFour" class="qn" /></p>
+      <p><input type="text/" id="qnFive" class="qn" /></p>
 
       <hr />
 
