--- a/page2.html
+++ b/page2.html
@@ -16,38 +16,44 @@
     <div>
       <h1>Question 1</h1>
       <p>How many BTS members are there?</p>
-      <p><input type="text" id="qnOne" class="qn" /></p>
+      <p><input type="text" id="qnOne" /></p>
+      <p id="feedback1" ></p>
 
       <hr />
 
       <h1>Question 2</h1>
       <p>What does BTS stand for?</p>
-      <p><input type="text" id="qnTwo" class="qn" /></p>
+      <p><input type="text" id="qnTwo" /></p>
+      <p id="feedback2" ></p>
 
       <hr />
 
       <h1>Question 3</h1>
       <p>When did BTS debut?</p>
-      <p><input type="text" id="qnThree" class="qn" /></p>
+      <p><input type="text" id="qnThree" /></p>
+      <p id="feedback3" ></p>
 
       <hr>
 
       <h1>Question 4</h1>
       <p>What song did BTS debut with?</p>
-      <p><input type="text" id="qnFour" class="qn" /></p>
+      <p><input type="text" id="qnFour" /></p>
+      <p id="feedback4" ></p>
 
       <hr />
 
       <h1>Question 5</h1>
       <p>How many awards has BTS won?</p>
-      <p><input type="text/" id="qnFive" class="qn" /></p>
+      <p><input type="text/" id="qnFive" /></p>
+      <p id="feedback5" ></p>
 
       <hr />
 
       <p><button id="btn" >Enter</button></p>
       <p id="output" >Total score:</p>
       <p id="score" >---</p>
-      <p id="percent" > ---%</p>
+      <p id="percent" >---%</p>
+      <p id ="message">---</p>
     </div>
   </body>
 </html>
