--- a/page1.html
+++ b/page1.html
@@ -11,7 +11,7 @@
   <a class="quiz" href="page2.html">Quiz</a>
   <hr>
 
-  <h1>Members</h1>
+  <strong><h1>Members</h1>
   <hr>
   <p>
    <ul>
@@ -53,7 +53,7 @@
       <li>Spent 200 weeks at No.1 for Billboard's Social 50 chart</li>
       <li>Have had the most weeks on the Billboard Hot 100 </li>
     </ul>
-  </p>
+  </p></strong>
 </body>
 
 </html>
